Fix gap

--- a/src/app/page.module.sass
+++ b/src/app/page.module.sass
@@ -320,13 +320,14 @@
             border: 1px solid #15151E
             display: flex
             flex-direction: column
-            gap: 30px
+            gap: 72px
             
             padding: 39px 42px 42px 42px
             border-radius: 13px
             @media (max-width: $size-brakepoint-mobile)
                 padding: 30px 10px 10px 10px
                 border-radius: 10px
+                gap: 30px
 
             & > h3
                 @media (max-width: $size-brakepoint-mobile)
